syntax = "proto3";

package sand;

option go_package = "/sand";

message address_range {
    uint64 beginning = 1;
    uint64 ending = 2;
}

message multi_selection {
    string address_space_name = 1;
    address_range address_space_extent = 2;
    bool is_synthetic = 3;
    repeated address_range selection_ranges = 4;
}

message location {
    string address_space_name = 1;
    uint64 address = 2;
}

message sand_update {
    string provider_name = 1;
    repeated multi_selection selections = 2;
    location current_location = 3;
}